seed db, setup ffaker, ffaker added to gemfile, add gg bridge img.

--- a/geotrigger_app/app/views/activities/index.html.erb
+++ b/geotrigger_app/app/views/activities/index.html.erb
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
+  <div id="activities-create">
   <br>
   <br>
   <br>
@@ -17,3 +18,5 @@
     </p>
   </div>
 <% end %>
+</div>
+</div>
