--- a/geotrigger_app/app/views/activities/new.html.erb
+++ b/geotrigger_app/app/views/activities/new.html.erb
@@ -1,3 +1,4 @@
+<div id="activities-create">
 <form action="/activities" method="post">
     <br>
     <br>
@@ -25,3 +26,4 @@
     
     <button> Post Activity </button>
 </form>
+</div>
