--- a/geotrigger_app/app/views/sites/contact.html.erb
+++ b/geotrigger_app/app/views/sites/contact.html.erb
@@ -50,6 +50,6 @@ L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpI
 var map = L.mapbox.map('map', 'examples.map-zr0njcqy');
 </script>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </body>
 </html>
