--- a/geotrigger_app/app/assets/stylesheets/activities.scss
+++ b/geotrigger_app/app/assets/stylesheets/activities.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Activities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// #activities-create {
+//   background: url('../assets/goldengate.jpeg') no-repeat center center; 
+//   background-size: cover;
+// }
+body {
+  background: url('../assets/goldengate.jpeg') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
