--- a/geotrigger_app/app/views/activities/show.html.erb
+++ b/geotrigger_app/app/views/activities/show.html.erb
@@ -125,30 +125,26 @@ border-radius: 200px;
 //  });
 // });
 
-var generator = {};
+// var generator = {};
 
 $(document).ready(function() {
   $.get("/generator/index.json", function (data) {
-    // console.log(data.json);
-    generator = data.json;
+    console.log(data.json);
+    activities = data.json;
   });
 });
 
 $(document).ready(function () {
 
   L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
-})
 
-
-
-  
 
   var map = L.mapbox.map('map', 'jkdale89.l2l2p32i')
   var myLayer = L.mapbox.featureLayer().addTo(map);
 
     $.ajax({ 
       dataType: 'text',
-      url: '/generator.json',
+      url: '/activities.json',
       success: function(data) {
         var geojson;
         geojson = $.parseJSON(data)   
@@ -164,8 +160,8 @@ $(document).ready(function () {
         
     map.featureLayer.on("ready", function (){
       var myLayer = L.mapbox.featureLayer().addTo(map);
-      
-
+    });
+  });
 // CREATES A RADIUS HOVER MARKER
 //     var RADIUS = 500;
 //     var filterCircle = L.circle(L.latLng(37.7, -122), RADIUS, {
@@ -183,42 +179,64 @@ $(document).ready(function () {
 //                 feature.geometry.coordinates[0])) < RADIUS;
 //     });
 // });
-})
+// })
 
-$(document).ready(function() {
-  L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
+// $(document).ready(function() {
+//   L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
   
 
-  var map = L.mapbox.map('map', 'jkdale89.l2l2p32i')
-  var myLayer = L.mapbox.featureLayer().addTo(map);
+//   var map = L.mapbox.map('map', 'jkdale89.l2l2p32i')
+//   var myLayer = L.mapbox.featureLayer().addTo(map);
 
-  // L.mapbox.accessToken = 'pk.eyJ1IjoiemFja3NocCIsImEiOiIzZ09nMDZZIn0.a_wcJpacq_Sojc5QO_4gww';
+//   // L.mapbox.accessToken = 'pk.eyJ1IjoiemFja3NocCIsImEiOiIzZ09nMDZZIn0.a_wcJpacq_Sojc5QO_4gww';
 
-  // var map = L.mapbox.map('map', 'zackshp.k0bb3ic6').setView([39.606810, -116.929677], 7);
-  // var myLayer = L.mapbox.featureLayer().addTo(map);
+//   // var map = L.mapbox.map('map', 'zackshp.k0bb3ic6').setView([39.606810, -116.929677], 7);
+//   // var myLayer = L.mapbox.featureLayer().addTo(map);
   
-  myLayer.on('layeradd', function(e) {
-    var marker, popupContent, properties;
-    marker = e.layer;
-    properties = marker.feature.properties;
-    popupContent = '<div class="popup"><h3><a href="/markers/' + properties.id + '" target="marker">' + properties.name + '</a></h3><p class="popup-num">Marker No. ' + properties.number + '</p><p>' + properties.description + '</p></div>';
-    return marker.bindPopup(popupContent, {
-      closeButton: false,
-      minWidth: 300
-    });
-  });
-  $.ajax({
-    dataType: 'text',
-    url: '/markers.json',
-    success: function(data) {
-      var geojson;
-      geojson = $.parseJSON(data);
-      return myLayer.setGeoJSON(geojson);
-    }
-  });
-});
+//   myLayer.on('layeradd', function(e) {
+//     var marker, popupContent, properties;
+//     marker = e.layer;
+//     properties = marker.feature.properties;
+//     popupContent = '<div class="popup"><h3><a href="/markers/' + properties.id + '" target="marker">' + properties.name + '</a></h3><p class="popup-num">Marker No. ' + properties.number + '</p><p>' + properties.description + '</p></div>';
+//     return marker.bindPopup(popupContent, {
+//       closeButton: false,
+//       minWidth: 300
+//     });
+//   });
+//   $.ajax({
+//     dataType: 'text',
+//     url: '/markers.json',
+//     success: function(data) {
+//       var geojson;
+//       geojson = $.parseJSON(data);
+//       return myLayer.setGeoJSON(geojson);
+//     }
+//   });
+// });
 </script>
 </script>
 
 </body>
 </html>
+<!-- <div class="container">
+  <div id="activities-create">
+  <br>
+  <br>
+  <br>
+  <h1>Active Activities</h1>
+<%= link_to "New Activity", '/activities/new', method: "GET" %>
+<% @activities.each do |activity| %>
+  <div>
+    <p>
+       <strong>Latitude:</strong>  <%= activity.lat %><br>
+       <strong>Longtitude:</strong>  <%= activity.lon %><br>
+       <strong>Location:</strong>  <%= activity.location_name %> <br>
+       <strong>Type of Activity:</strong>  <%= activity.activity_tag %> <br>
+       <strong> Activity Description:</strong> <%= activity.activity_description %><%= button_to "EDIT", edit_activity_path(activity), method: "GET" %> 
+       <%= button_to "DELETE",  activity_path(activity), method: :delete %>
+
+    </p>
+  </div>
+<% end %>
+</div>
+</div> -->
