--- a/geotrigger_app/app/views/users/index.html.erb
+++ b/geotrigger_app/app/views/users/index.html.erb
@@ -12,6 +12,10 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.js'></script>
 <link href='https://api.tiles.mapbox.com/mapbox.js/v2.1.5/mapbox.css' rel='stylesheet' />
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+
 <style>
   body { margin: 200px; padding: 200px; position: relative}
   #map { position: absolute; 
@@ -33,8 +37,6 @@
     z-index: 1;
 
        }
-</style>
-<style>
 /*
 * These CSS rules affect the tooltips within maps with the custom-popup
 * class. See the full CSS for all customizable options:
@@ -90,9 +92,49 @@ border-radius: 200px;
   
 </style>
 <div class='custom-popup' id='map'></div>
-<script>
-L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
-var map = L.mapbox.map('map', 'jkdale89.l2l2p32i');
+<script type="text/javascript">
+
+$(document).ready(function() {
+  $.get("/activities.json", function (data) {
+    console.log(data);
+     return data;
+  });
+});
+
+$(document).ready(function () {
+
+  L.mapbox.accessToken = 'pk.eyJ1IjoibWFya21hcmttYXJrIiwiYSI6IjBVV1oxYUkifQ.eq_QpInsA8ggRqbXrJRtAw';
+  var map = L.mapbox.map('map', 'jkdale89.l2l2p32i');
+  // var myLayer = L.mapbox.featureLayer().addTo(map);
+
+$.getJSON("/activities/index.json", function(data) {
+  L.geoJson(data, {
+    style: function (feature) {
+
+    }
+  });
+});
+  // map.featureLayer.on('layeradd', function(e) {
+  //   var marker, popupContent, properties;
+  //   marker = e.layer;
+  //   properties = marker.feature.properties;
+  //   popupContent = '<div class="popup">' + '<h3>' + properties.name + '</h3>' + '<p>' + properties.address + '</p>' + '</div>';
+  //   return marker.bindPopup(popupContent, {
+  //     closeButton: false,
+  //     minWidth: 320
+  //   });
+  // });
+  $.ajax({ 
+    dataType: 'text',
+    url: '/activities.json',
+    success: function(data) {
+      var geojson;
+      geojson = JSON.parse(data)  
+      console.log(geojson) 
+        return map.setGeoJSON(geojson);
+    }
+  });
+});
 </script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
 
